sites/hochschule-burgenland/applications/argocd/extensions/gateway-applicationset.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-applicationset
  annotations:
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  parentRefs:
    - name: argocd-applicationset-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - webhook.argocd.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-applicationset-controller
          port: 7000
